# lem_in

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  author  bfs.c  char_makevec.c  check_profit.c  creations.c  defective_parse.c  defective_parse_links.c  delete_hashtable.c  dijkstra.c  dinic.c  enlarge_table.c  file  find_node.c  flow.c  free_memory.c  free_memory2.c  ft_add_path.c  ft_bfs.c  ft_dfs.c  ft_nullify.c  get_optimal_flow.c  gleb  hard_test.py  hashtables_test  hey  insert_node.c  konstantikk_test_file.txt  lem-in  lem-in1  lem-in2  lem_in.h  lem_in_input.txt  lem_in_output.txt  lem_in_tests.py  let_the_flow_go.c  (+25 more)
includes/: lem_in.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_count_word.c  ft_intlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+22 more)
libft/ft_printf/: ft_printf.c  itoa_base_printf.c  print_float.c  print_string.c
libft/hashtable/: ft_hash_function.c  ft_ht_init.c
libft/includes/: get_next_line.h  libft.h
libft/lst_funcs/: ft_lstnew.c
libft/useful_funcs/: ft_del_twodem_arr.c  get_next_line.c  gnl.c
libft/vec_funcs/char_vec/: ft_chr_vec_del.c  ft_chr_vec_enlarge.c  ft_chr_vec_init.c  ft_chr_vec_popfront.c  ft_chr_vec_pushback.c
libft/vec_funcs/int_vec/: ft_int_vec_popback.c
libft/vec_funcs/ptr_vec/: find_and_del.c  ft_ptr_vec_del.c  ft_ptr_vec_enlarge.c  ft_ptr_vec_init.c  ft_ptr_vec_popback.c  ft_ptr_vec_popfront.c  ft_ptr_vec_pushback.c  ft_ptr_vec_pushfront.c  garbage_collector.c
src/: bin_heap.c  creations.c  dijkstra.c  find_node.c  free_memory.c  free_memory2.c  ft_add_path.c  ft_nullify.c  main.c  parse.c  read_links.c  safe_creations.c
